# SNNakesAndLadders

./: .gitignore  README.md  board_to_graph.py  commands.txt  environment.yml  example.ipynb  pyproject.toml  smallboardtemplate.snn
simsnn/: __main__.py
simsnn/core/: detectors.py  networks.py  simulators.py
simsnn/examples/: circuit.py
